# kr_opt_sfc

./: .gitignore  Dockerfile  LICENSE  README.md  install.sh  ros_entrypoint.sh  utils.rosinstall
opt_sfc/: CMakeLists.txt  package.xml
opt_sfc/config/: sfc.yaml  sim_sfc.rviz
opt_sfc/dataset/: dataset_10.h5
opt_sfc/include/sfc/: plan_path.hpp  sfc_cover_opt.hpp  sfc_utils.hpp  sfc_utils_opt.hpp  sfc_vis.hpp
opt_sfc/launch/: sfc.launch  sfc2d.launch  vis_sfc.launch
opt_sfc/scripts/: corridor_utils.py  corridor_utils2d.py  projected_2d.txt  read_dataset.py  utils.py  visualizer.py  visualizer2d.py
opt_sfc/src/: sfc.cpp
